# ntr

./: '  .gitignore  Cargo.toml  DEV.md  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json
.direnv/: flake-profile-1-link
.github/: release.yaml
.github/workflows/: bin-release.yaml  test.yaml
.github/workflows/_unused/: cd.yaml
__old/appDir/: fileType.tsx  helpers.ts  index.ts  node.ts
__old/dev/: index.ts
__old/dev/Debug/: DebugContext.tsx  DebugModal.tsx  DebugPageList.tsx  DebugTheme.tsx  DebugToggle.tsx  index.tsx
_crate/: Cargo.toml
_crate/src/: build.rs  main.rs
_crate/src/routing/: mod.rs
_crate/src/utils/: fs.rs
crate/: Cargo.toml
crate/src/: build.rs  main.rs
crate/src/utils/: fs.rs  mod.rs
lib/: .npmignore  README.md  _old.ts  components.json  index.ts  package.json  path.ts  tsconfig.json
lib/next/: Link.tsx  index.ts  link.tsx  routers.ts  utils.ts
lib/next/routers/: appRouter.ts  index.ts  pagesRouter.ts
lib/scripts/: build.sh
lib/types/: index.d.ts  index.ts  routes.d.ts  routes.ts  rustTypes.ts  utils.ts
lib/ui/Debug/: DebugModal.tsx  DebugPageList.tsx  DebugTheme.tsx
lib/ui/utils/: DumpJSON.tsx
playground/: index.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
playground/examples/: Link.tsx  appRouter.tsx  createUrl.ts  pagesRouter.tsx
playground/src/: test.ts
ui/: index.ts  package.json  tsconfig.json
ui/Debug/: _DebugReactQueryDevtools.tsx  index.tsx
ui/hooks/: index.ts
ui/utils/: components.tsx  index.ts
(+28 files in other folders)
