[package]
name = "nra"
version = "0.0.1"
edition = "2021"
build = "./src/build.rs"
# authors = ["me <me@gmail.com>"]

[[bin]]
name = "nra-bin"
path = "src/main.rs"

[lib]
name = "nra"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dirs = "5.0.1"
serde = { version = "1.0.183", features = ["derive"] }
specta = "1.0.5"

# [build-dependencies]
# specta = "*"
# nra = { path = "./src/lib/mod.rs" }
# nra = { path = "./" }
